prevent overflow of quote box

--- a/css/base.css
+++ b/css/base.css
@@ -413,6 +413,8 @@ body,html {
   border-style: solid;
   border-radius: 1em;
   border-color: rgba(127, 127, 127, 0.1);
+  max-height: 27vh;
+  overflow-y: hidden;
 }
 
 .quote-button {
